# 3dmm-dump

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: brender.rs  chunky.rs  ggcl.rs  ggcm.rs  ggf.rs  glbs.rs  glf.rs  glpi.rs  glxf.rs  kauai.rs  main.rs  mbmp.rs  modl.rs  mtrl.rs  order.rs  tmap.rs  tmpl.rs  txxf.rs
src/kauai/: kcd2.rs  kcdc.rs
